syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.OracleUser";

service OracleUserContract {
  option (aelf.csharp_state) = "AElf.Contracts.OracleUser.OracleUserContractState";

  rpc QueryTemperature (aelf.Address) returns (google.protobuf.Empty) {}
  
  rpc RecordTemperature (TemperatureRecord) returns (google.protobuf.Empty) {}

  rpc GetHistoryTemperatures (google.protobuf.Empty) returns (TemperatureRecordList) {
      option (aelf.is_view) = true;
  }
}

message TemperatureRecord {
  string temperature = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message TemperatureRecordList {
  repeated TemperatureRecord value = 1;
}